--- a/app/frontend/views/cart.html
+++ b/app/frontend/views/cart.html
@@ -8,7 +8,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12">
-				<uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)">{{alert.msg}}</uib-alert>
+				  <div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + (alert.type || 'warning')" close="closeAlert($index)">{{alert.msg}}</div>
 			</div>
 			
 		</div>
