--- a/app/frontend/views/login.html
+++ b/app/frontend/views/login.html
@@ -2,7 +2,7 @@
 	<div class="col-sm-6 col-sm-offset-3">
 
 		<h1><span class="fa fa-sign-in"></span> Login</h1>
-		<uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)">{{alert.msg}}</uib-alert>		  
+		<div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + (alert.type || 'warning')" close="closeAlert($index)">{{alert.msg}}</div>	  
 		<!-- LOGIN FORM -->
 		<form ng-submit="login( user )" method="post">
 			<div class="form-group">
