--- a/app/backend/views/add-new-product.html
+++ b/app/backend/views/add-new-product.html
@@ -13,8 +13,8 @@
 	<form ng-submit="addNewProduct( product )" method="POST" role="form">
 		<product></product>
 		<button type="submit" class="btn btn-primary"> Save </button>
-		<a href="#products" class="btn btn-default" ng-click="revertAddingProduct( product )"> Cancel </a>
-		<a href="#products" class="pull-right">Go Back</a>
+		<a href="#!products" class="btn btn-default" ng-click="revertAddingProduct( product )"> Cancel </a>
+		<a href="#!products" class="pull-right">Go Back</a>
 	</form>
 </div>
 
