--- a/app/backend/views/attribute-sets.html
+++ b/app/backend/views/attribute-sets.html
@@ -17,12 +17,12 @@
 			<tbody>
 				<tr ng-repeat="at in attributeSets">
 					<td> {{ at.name }} </td>
-					<td> <a href="#/attribute-sets/{{at._id}}"> View </a></td>
+					<td> <a href="#!/attribute-sets/{{at._id}}"> View </a></td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
 	<div class="container">
-		<a class="btn btn-primary" href="#/attribute-sets/add-new"> <i class="fa fa-plus"></i> Add New Set </a>
+		<a class="btn btn-primary" href="#!/attribute-sets/add-new"> <i class="fa fa-plus"></i> Add New Set </a>
 	</div>
 </div>
