--- a/app/backend/views/categories.html
+++ b/app/backend/views/categories.html
@@ -29,13 +29,13 @@
 					<td> {{ category.active | yesNo }} </td>
 					<td> {{ category.created_at | date:"MM/dd/yyyy 'at' h:mma"  }} </td>
 					<td> {{ category.updated_at  | date:"MM/dd/yyyy 'at' h:mma" }} </td>
-					<td> <a href="#/categories/{{category._id}}" > <!-- <i class="fa fa-pencil"></i> --> View </a>  </td>
+					<td> <a href="#!/categories/{{category._id}}" > <!-- <i class="fa fa-pencil"></i> --> View </a>  </td>
 				 </tr>
 			 </tbody>
 		</table>
 	</div>
 	<div class="container">
-		<a class="btn btn-primary" href="#/categories/add-new">
+		<a class="btn btn-primary" href="#!/categories/add-new">
 			<i class="fa fa-plus"></i> Add New
 		</a>
 		<button class="btn btn-danger" ng-disabled="!showDelete" ng-click="deleteCategories()"> <i class="fa fa-trash"></i> Delete </button>
