--- a/app/backend/views/edit-view-set.html
+++ b/app/backend/views/edit-view-set.html
@@ -22,9 +22,9 @@
 	</div>
 
 	<div class="container">
-		<a class="btn btn-default" href="#/attributes/">  Manage Attributes </a> 
-		<a class="btn btn-default" href="#/attributes/add-new">  Add New Attribute </a> 
-		<a class="pull-right" href="#/attribute-sets/">  Go back </a> 
+		<a class="btn btn-default" href="#!/attributes/">  Manage Attributes </a> 
+		<a class="btn btn-default" href="#!/attributes/add-new">  Add New Attribute </a> 
+		<a class="pull-right" href="#!/attribute-sets/">  Go back </a> 
 	</div>
 </div>
 
