--- a/app/backend/views/edit-view-attribute.html
+++ b/app/backend/views/edit-view-attribute.html
@@ -10,6 +10,6 @@
 	<form ng-submit="updateAttribute( attribute )" method="POST" role="form">
 		<attribute></attribute>
 		<button type="submit" class="btn btn-primary"> <i class="fa fa-floppy-o"></i> Update </button> 
-		<a href="#attributes" class="pull-right">Go Back</a>
+		<a href="#!attributes" class="pull-right">Go Back</a>
 	</form>
 </div>
