--- a/app/backend/views/edit-view-category.html
+++ b/app/backend/views/edit-view-category.html
@@ -9,6 +9,6 @@
 	<form ng-submit="updateCategory( category )" method="POST" role="form">
 		<category></category>
 		<button type="submit" class="btn btn-primary"> <i class="fa fa-floppy-o"></i> Update </button>
-		<a href="#categories" class="pull-right">Go Back</a>
+		<a href="#!categories" class="pull-right">Go Back</a>
 	</form>
 </div>
