--- a/app/backend/views/edit-view-product.html
+++ b/app/backend/views/edit-view-product.html
@@ -23,8 +23,8 @@
 	<form ng-submit="updateProduct( product )" method="POST" role="form" ng-hide="loading">
 		<product ></product>
 		<button type="submit" class="btn btn-primary"> Update </button>
-		<a href="#products" class="pull-right">Go Back</a>
-		<a href="#products" class="btn btn-danger" ng-click="deleteProduct( product )"> <i class="fa fa-trash-o"></i> Delete </a>
+		<a href="#!products" class="pull-right">Go Back</a>
+		<a href="#!products" class="btn btn-danger" ng-click="deleteProduct( product )"> <i class="fa fa-trash-o"></i> Delete </a>
 	</form>
 </div>
 
