--- a/app/backend/views/add-new-product.html
+++ b/app/backend/views/add-new-product.html
@@ -8,8 +8,8 @@
 	 <!-- <div class="alert alert-success" ng-show="addSuccess">
 	  <strong>Success!</strong> New Product Added Successfully!
 	</div>  -->
-	<uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)">{{alert.msg}}</uib-alert>
-	
+	<!-- <uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)">{{alert.msg}}</uib-alert> -->
+	<div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + (alert.type || 'warning')" close="closeAlert($index)">{{alert.msg}}</div>
 	<form ng-submit="addNewProduct( product )" method="POST" role="form">
 		<product></product>
 		<button type="submit" class="btn btn-primary"> Save </button>
