--- a/app/backend/views/edit-view-product.html
+++ b/app/backend/views/edit-view-product.html
@@ -6,7 +6,8 @@
 
 <loader></loader>
 <div class="container" ng-init="loadDefaults()" ng-hide="loading">
-	<uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)">{{alert.msg}}</uib-alert>
+	<!-- <uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)">{{alert.msg}}</uib-alert> -->
+	<div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + (alert.type || 'warning')" close="closeAlert($index)">{{alert.msg}}</div>
 	<!-- <ul class="messages" >
 		<li> 
 			<div class="message alert alert-success" ng-show="updateSuccess">
