--- a/app/backend/views/attributes.html
+++ b/app/backend/views/attributes.html
@@ -40,7 +40,8 @@
 	</div>
 	<div class="container" >
 		
-		<uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)"> {{ deleteCount }} {{alert.msg}}</uib-alert>
+		<!-- <uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)"> {{ deleteCount }} {{alert.msg}}</uib-alert> -->
+		<div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + (alert.type || 'warning')" close="closeAlert($index)">{{ deleteCount }} {{alert.msg}}</div>
 		<table class="table table-striped" ng-show="attributes.length>0">
 			<thead>
 				<tr>
