--- a/app/backend/views/edit-view-attribute.html
+++ b/app/backend/views/edit-view-attribute.html
@@ -6,7 +6,8 @@
 
 <loader></loader>
 <div class="container" ng-hide="loading">
-	<uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)">{{alert.msg}}</uib-alert>
+	<!-- <uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)">{{alert.msg}}</uib-alert> -->
+	<div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + (alert.type || 'warning')" close="closeAlert($index)">{{alert.msg}}</div>
 	<form ng-submit="updateAttribute( attribute )" method="POST" role="form">
 		<attribute></attribute>
 		<button type="submit" class="btn btn-primary"> <i class="fa fa-floppy-o"></i> Update </button> 
