--- a/app/backend/views/products.html
+++ b/app/backend/views/products.html
@@ -7,7 +7,9 @@
 <loader></loader>
 <div class="product-listing-page" ng-hide="loading">
 	<div class="container">
-		<uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)">{{ deleteCount }} {{alert.msg}}</uib-alert>
+		<!-- <uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)">{{ deleteCount }} {{alert.msg}}</uib-alert> -->
+
+		<div uib-alert ng-repeat="alert in alerts" ng-class="'alert-' + (alert.type || 'warning')" close="closeAlert($index)">{{ deleteCount }} {{alert.msg}}</div>
 	</div>
 	<div class="container">
 		
