--- a/app/frontend/views/homepage.html
+++ b/app/frontend/views/homepage.html
@@ -3,3 +3,9 @@
 		 <h2> <span class="glyphicon glyphicon-fire" aria-hidden="true"></span> {{ message }} </h2>
 	</div>
 </div> 
+<div class="container">
+	<p class="ipad-test">
+		Let's say you had three major breakpoints in a design. This design also had a large background graphic and you wanted it looking it's best on any screen (retina or not) and not waste any bandwidth. You'd set up 6 media queries, one for each breakpoint and one for each one of those breakpoints on retina. Then you'd override the background image all the way down.
+	</p>
+</div>
+
