--- a/app/frontend/assets/stylesheets/style.css
+++ b/app/frontend/assets/stylesheets/style.css
@@ -306,3 +306,19 @@ section, footer, header, aside, nav{
 .view-cart-page .product-image-wrapper{
 	height:90px;
 }
+.ipad-test{
+		font-size: 20px;
+	}
+
+
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+	.ipad-test{
+		display: block;
+	}
+}
+
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (-webkit-min-device-pixel-ratio: 2){
+	.ipad-test{
+		display: none;
+	}
+}
