added checkout page

--- a/app/frontend/views/cart.html
+++ b/app/frontend/views/cart.html
@@ -106,7 +106,8 @@
 								<h4> <strong>Total : <i class="fa fa-inr"></i> {{ cart | getCartTotalPrice | currency:'' }} </strong></h4>
 							</div>
 							<div class="col-md-3 col-xs-12">
-								<button class="btn btn-success btn-md btn-block"> Checkout </button>
+								<!-- <button class="btn btn-success btn-md btn-block" > Checkout </button> -->
+								<a class="btn btn-success btn-md btn-block" href="#!/checkout" > Checkout </a>
 							</div>
 						</div>
 					</div>
