--- a/app/frontend/views/checkout.html
+++ b/app/frontend/views/checkout.html
@@ -1,5 +1,71 @@
 <div class="container">
-	<div class="jumbotron text-center">
+	<!-- <div class="jumbotron text-center">
 		 <h1> <span class="glyphicon glyphicon-fire" aria-hidden="true"></span> {{ message }} </h1>
+	</div> -->
+	<div class="row">
+		<div class="col-md-12 col-xs-12">
+			<div class="panel panel-info">
+				<div class="panel-heading">
+					<div class="panel-title">
+						<h3>
+							CHECKOUT
+						</h3>
+					</div>
+				</div>
+				<div class="panel-body">
+					<!-- <div class="row">
+						<div class="col-md-12 col-xs-12">
+							<div class="panel panel-default">
+								<div class="panel-heading">
+									<h5> Shipping Address </h5>
+								</div>
+								<div class="panel-body">
+									
+								</div>
+							</div>	
+						</div>											
+					</div>
+					<div class="row">
+						<div class="col-md-12 col-xs-12">
+							<div class="panel panel-default">
+								<div class="panel-heading">
+									<h5> Delivery Method </h5>
+								</div>
+								<div class="panel-body">
+									
+								</div>
+							</div>	
+						</div>											
+					</div> -->
+					<div class="row">
+						<div class="col-md-12 col-xs-12">
+							<div class="panel panel-default">
+								<div class="panel-heading">
+									<h5> Payment </h5>
+								</div>
+								<div class="panel-body">
+									
+								</div>
+							</div>	
+						</div>											
+					</div>
+					<!-- <div class="row">
+						<div class="col-md-12 col-xs-12">
+							<div class="panel panel-default">
+								<div class="panel-heading">
+									<h5> Billing Address </h5>
+								</div>
+								<div class="panel-body">
+									
+								</div>
+							</div>	
+						</div>											
+					</div> -->
+				</div>
+				<!-- <div class="panel-footer">
+					
+				</div> -->
+			</div>
+		</div>
 	</div>
 </div> 
