--- a/app/frontend/assets/stylesheets/style.css
+++ b/app/frontend/assets/stylesheets/style.css
@@ -5,6 +5,7 @@
 
 body, html{
 	height:100%;min-height:100%;
+	background: none;
 }
 
 body{
@@ -12,7 +13,6 @@ body{
 	color: #5e5b64;
 	overflow-y:auto;
 	overflow-x:hidden;
-	//text-align:center;
 }
 
 a, a:visited {
